correct auth route

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -3,7 +3,7 @@
         <h1 class="form-title">REGISTER</h1>
     </header>
      
-      {{> flash_message}} 
+      {{> flashMessage}} 
      
      {{!-- 
       {{#if msg}} VOIR msg
@@ -15,7 +15,7 @@
 
         <div class="form-item-wrapper flexed-item">
             <label for="pseudo" class="label-ref label">Pseudo</label>
-            <input id="pseudo" name="name" type="text" class="input-text input" placeholder="Albert" required value="Beyoncé">
+            <input id="pseudo" name="pseudo" type="text" class="input-text input" placeholder="Albert" required value="Beyoncé">
         </div>
         <div class="form-item-wrapper flexed-item">
             <label for="email" class="label-ref label">Email</label>
