--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -3,6 +3,7 @@
         <h1 class="form-title">Welcome Back !</h1>
     </header>
     
+{{>flashMessage}}  
     {{!-- {{>flash_message}}
   {{#if msg}}
     <p class="message {{msg.status}}">{{msg.text}}</p>
@@ -10,14 +11,14 @@
 
     <form method="post" action="/signin" id="form-user">
         <div class="form-item-wrapper flexed-item">
-          <label for="pseudo" class="label-ref label">Pseudo</label>
-          <input id="pseudo" type="pseudo" name="pseudo" class="input-text input" placeholder="brad.pitt@gmail.com" required value="brad@pitt.com">
+          <label for="email" class="label-ref label">Email</label>
+          <input id="email" type="email" name="email" class="input-text input" placeholder="brad.pitt@gmail.com" required value="Beyonce@gui.com">
         </div>
         <div class="form-item-wrapper flexed-item">
           <label for="password" class="label-ref label">Mot de passe</label>
-          <input id="password" type="password"  name="password" class="input-text input" placeholder="••••••" required value="1234">
+          <input id="password" type="password"  name="password" class="input-text input" placeholder="mot de passe" required value="1234">
         </div>
-        <button class="button-primary white">Se connecter!</button>
+        <button class="button-primary white">Se connecter</button>
     </form>
 
 </section>  
