add css injection mechanic in layout.hbs

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,11 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    {{#if css}}
+      {{#each css}}
+      <link rel="stylesheet" href="/stylesheets/{{this}}">
+      {{/each}}
+    {{/if}}
   </head>
   <body>
     {{{body}}}
