correct messages mechanism and style

--- a/views/gameHome.hbs
+++ b/views/gameHome.hbs
@@ -1,1 +1,13 @@
-<h2>Survivras-tu</h2>
+<h2>Jouer</h2>
+
+<div id="text-intro">
+  <p>Prêt à survivre en pleine nature ?</p>
+  <p>En fonction de ta forme, opte pour l'option de ton choix :</p>
+</div>
+
+<div id="link-modes">
+  <a href="/game/balade">Balade</a>
+  <a href="/game/rando">Rando</a>
+  <a href="/game/trek">Trek</a>
+</div>
+
