--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,7 @@
   <head>
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/messages.css">
     {{#if css}}
       {{#each css}}
       <link rel="stylesheet" href="/stylesheets/{{this}}">
