--- a/views/recipesAll.hbs
+++ b/views/recipesAll.hbs
@@ -1,13 +1,14 @@
 {{!-- Display all recipes available to the player --}}
 
-<h2>Qu'est ce qu'on mange ce soir ?</h2>
+<h2>Bonjour {{player.pseudo}}</h2>
+<h3>Qu'est ce qu'on mange ce soir ?</h3>
 
 {{!-- filter available recipes by plant --}}
 <div>
     <label for="plant">Choisir une plante</label>
     <select name="plant" id="plant">
-        {{#each recipe}}
-            <option value="{{this.plant._id}}">{{this.plant.commonName}}</option>
+        {{#each plants}}
+            <option value="{{this._id}}">{{this.commonName}}</option>
         {{/each}}
     </select>
 </div>
@@ -26,12 +27,8 @@
             <a href="/recipes/one/{{this._id}}">
                 <h4>{{this.name}}</h4>
             </a>
-            <p>Durée: {{this.durationMinutes}}</p>
+            <p>Durée: {{this.durationMinutes}}minutes</p>
             <img src="{{this.image}}" alt="{{this.name}}">
-            <a href="/recipes/delete/{{this._id}}">"Delete" icon here</a>
-            {{!-- <img src="/images/icons/trash-alt.svg" alt="trash-icon"> --}}
-            <a href="/recipes/edit/{{this._id}}">"Edit" icon here</a>
-            {{!-- <img src="/images/icons/pencil.svg" alt="edit-icon"> --}}
             <p>Auteur: {{this.creator.pseudo}}</p>
         </div>
     {{/each}}
