add helpers for game routes

--- a/views/Partials/lifebar.hbs
+++ b/views/Partials/lifebar.hbs
@@ -1,3 +1,3 @@
 <div>
-    <progress id="life" value="{{gameplay.life}}" max="{{gameplay.life}}"></progress>
+    <progress id="life" value="{{gameplay.life}}" max="{{gameplay.maxLife}}"></progress>
 </div>
