--- a/views/gameHome.hbs
+++ b/views/gameHome.hbs
@@ -6,8 +6,8 @@
 </div>
 
 <div id="link-modes">
-  <a href="/game/balade">Balade</a>
-  <a href="/game/rando">Rando</a>
-  <a href="/game/trek">Trek</a>
+  <a href="/game/{{links.balade}}/begin">Balade</a>
+  <a href="/game/{{links.rando}}/begin">Rando</a>
+  <a href="/game/{{links.trek}}/begin">Trek</a>
 </div>
 
