player route et views

--- a/views/playerProfile.hbs
+++ b/views/playerProfile.hbs
@@ -1,3 +1,25 @@
 <h2>Player Profile</h2>
 
-<p> </p>
+<div>
+    
+    <p> Pseudo : {{player.pseudo}}</p> 
+    <p> Email : {{player.email}}</p>
+</div>
+<div>
+    <a href="/player/update"> Modifier le profil</a>
+    <a href="/auth/logout"> Déconnexion</a>
+    <a href="/player/delete"> Supprimer le profil</a>
+</div>
+
+{{!-- MY PLANT COLLECTION  --}}
+{{!-- plants les plus reconnus  --}}
+
+{{!-- RECIPES  --}}
+{{!-- Liste de recette :
+
+ Titre recette  
+ Duration
+ EDIT + DELETE
+
+ 
+ --}}
