--- a/views/gameEnd.hbs
+++ b/views/gameEnd.hbs
@@ -1,1 +1,42 @@
-<h2>Game End (écran récap comportant la liste des plantes)</h2>
+<h2>Content de ton périple ?</h2>
+
+
+<div id="mode-lifebar">
+  <div>
+    <p class="game-mode">{{gameplay.mode}}</p>
+  </div>
+  {{> lifebar}}
+</div>
+
+<div id="game-recap">
+
+  <div id="links-end">
+    <a href="/player/xxx">Voir ta collection</a>
+    <a href="/game">Nouvelle partie</a>
+  </div>
+
+  <div id="plants">
+    {{#each viewedPlants}}
+    <div id="card">
+      <div>
+        <img src="{{this.plant.imageUrl}}" alt="{{this.plant.commonName}}" class="plant-img">
+      </div>
+      <div>
+        {{#if this.isChoiceOk}}
+        <a href="/plant/{{this.plant._id}}/endgame">
+        {{/if}}
+          <p>{{this.plant.commonName}}</p>
+        {{#if this.isChoiceOk}}
+        </a>
+        {{/if}}
+        <div><img src="/images/icons/check.svg" alt="success" class="icon"></div>
+        {{else}}
+        <div><img src="/images/icons/times.svg" alt="success" class="icon"></div>
+        {{/if}}
+      </div>
+    </div>
+    {{/each}}
+  </div>
+
+</div>
+
