--- a/views/recipeOne.hbs
+++ b/views/recipeOne.hbs
@@ -5,6 +5,7 @@
     {{!-- <img src="/images/icons/trash-alt.svg" alt="trash-icon"> --}}
     <a href="/recipes/edit/{{recipe._id}}">"EDIT" icon</a>
     {{!-- <img src="/images/icons/pencil.svg" alt="edit-icon"> --}}
+    <a href="/recipes">Revenir à la liste des recettes</a>
     <img src="{{recipe.image}}" alt="">
 </div>
 
