player route et view

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,4 @@
 {{>nav}}
 <h1>Project Edibles</h1>
 <a href="/game">Jouer</a>
-<a href="/rules">Lire les règles</a>
+<a href="/game/rules">Lire les règles</a>
