--- a/views/playerProfile.hbs
+++ b/views/playerProfile.hbs
@@ -1,10 +1,9 @@
-<h2>Player Profile</h2>
+<h2>{{player.pseudo}}</h2>
 
 <div>
-    
-    <p> Pseudo : {{player.pseudo}}</p> 
     <p> Email : {{player.email}}</p>
 </div>
+
 <div>
     <a href="/player/update"> Modifier le profil</a>
     <a href="/auth/logout"> Déconnexion</a>
@@ -21,5 +20,4 @@
  Duration
  EDIT + DELETE
 
- 
  --}}
