retirer auth from player

--- a/views/playerProfile.hbs
+++ b/views/playerProfile.hbs
@@ -6,7 +6,7 @@
 
 <div>
     <a href="/player/update"> Modifier le profil</a>
-    <a href="/auth/logout"> Déconnexion</a>
+    <a href="/logout"> Déconnexion</a>
     <a href="/player/delete"> Supprimer le profil</a>
 </div>
 
