--- a/views/recipeAdd.hbs
+++ b/views/recipeAdd.hbs
@@ -21,7 +21,7 @@
         <input type="text" id="otherIngredients" name="otherIngredients">
         {{!-- add button to ad new ingredient and clear input field --}}
         {{!-- addeventlistener on BTN => axios post to add the input value a list below--}}
-        <button id="add-new-ingredient"></button>
+        <button id="add-new-ingredient">Ajouter</button>
         <ul id="new-ingredients-list"></ul>
         
         <label for="instructions">Instructions</label>
