--- a/views/Partials/nav.hbs
+++ b/views/Partials/nav.hbs
@@ -1,7 +1,25 @@
-<a href="/signin">Se connecter</a>
-<a href="/signup">S'inscrire</a>
-<a href="/logout">Se déconnecter</a>
-<a href="/game">Jouer</a>
-<a href="/game/rules">Les règles du jeu</a>
-<a href="/player">Votre profil</a>
-<a href="/recipes">Vos recettes</a>
+
+<header id="header-main"> 
+    <nav id="nav-main">
+    <a href="/signin">Se connecter</a>
+    <a href="/signup">S'inscrire</a>
+    <a href="/logout">Se déconnecter</a>
+    <a href="/game">Jouer</a>
+    <a href="/game/rules">Les règles du jeu</a>
+    <a href="/player">Votre profil</a>
+    <a href="/recipes">Vos recettes</a>
+    </nav>
+</header>
+<aside id="sidebar">
+    <i id ="iconBurger" class="burger fa fa-bars fa-xl"></i>
+    <nav id="nav-mobile">
+        <a href="/signin">Se connecter</a>
+        <a href="/signup">S'inscrire</a>
+        <a href="/logout">Se déconnecter</a>
+        <a href="/game">Jouer</a>
+        <a href="/game/rules">Les règles du jeu</a>
+        <a href="/player">Votre profil</a>
+        <a href="/recipes">Vos recettes</a>
+    </nav>
+
+</aside>
