--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,8 @@
-{{>nav}}
-<h1>Project Edibles</h1>
-<a href="/game">Jouer</a>
-<a href="/game/rules">Lire les règles</a>
+
+<main id="content-main">
+    <h1>Project Edibles</h1>
+    <a href="/game">Jouer</a>
+    <a href="/game/rules">Lire les règles</a>
+</main>
+
+
