--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,8 +2,11 @@
 <html>
   <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/messages.css">
+     <link rel="stylesheet" href="/stylesheets/burger.css">
+     <script type="module" src="/javascripts/burger.js"> </script>
     {{#if css}}
       {{#each css}}
       <link rel="stylesheet" href="/stylesheets/{{this}}">
@@ -11,6 +14,7 @@
     {{/if}}
   </head>
   <body>
+    {{>nav}}
     {{{body}}}
   </body>
 </html>
