--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,9 @@
+@import url('./variables.css');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;900&display=swap');
+
 html {
   font-size: 10px;
+  font-family: 'IBM Plex Mono', 'Roboto', monospace, sans-serif;
 }
 
 
