--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,11 +5,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/messages.css">
-     <link rel="stylesheet" href="/stylesheets/burger.css">
-     <script type="module" src="/javascripts/burger.js"> </script>
+    <link rel="stylesheet" href="/stylesheets/burger.css">
+    <script type="module" src="/javascripts/burger.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     {{#if css}}
       {{#each css}}
       <link rel="stylesheet" href="/stylesheets/{{this}}">
+      {{/each}}
+    {{/if}}
+    {{#if js}}
+      {{#each js}}
+        <script type="module" src="/scripts/{{this}}"></script>
       {{/each}}
     {{/if}}
   </head>
