--- a/views/recipeAdd.hbs
+++ b/views/recipeAdd.hbs
@@ -1,6 +1,10 @@
 <div>
     <h2>Ajoutez une nouvelle recette</h2>
 </div>
+{{> flashMessage}} 
+<section id="back-link">
+        <a href="{{fromRoute}}">Fermer</a>
+</section>  
 
 <div>
     <form action="/recipes/addRecipe" method="post" enctype="multipart/form-data">
@@ -8,7 +12,7 @@
         <input type="text" id="name" name="name">
         
         <label for="prepTime">Durée de préparation</label>
-        <input type="number" id="prepTime" name="durationMinutes">
+        <input type="number" id="prepTime" min="0" name="durationMinutes">
         
         <label for="plant">Plante comestible</label>
         <select name="plant" id="plant" multiple>
@@ -21,7 +25,10 @@
         <input type="text" id="otherIngredients" name="otherIngredients">
         {{!-- add button to ad new ingredient and clear input field --}}
         {{!-- addeventlistener on BTN => axios post to add the input value a list below--}}
+        
+        {{!-- ATTENTION CHANGER DESTINATION DU HREF --}}
         <button id="add-new-ingredient">Ajouter</button>
+
         <ul id="new-ingredients-list"></ul>
         
         <label for="instructions">Instructions</label>
@@ -30,9 +37,7 @@
         <label for="image">Télécharger une image</label>
         <input type="file" id="image" name="image">
 
-        <button type="submit">Créer la recette</button>
+        <button id="submit-create-form">Créer la recette</button>
        
-       {{!-- Go back to where the player came from => either dashboard or /recipes --}}
-        <a href="">Annuler</a>
-    </form>
+     </form>
 </div>
