--- a/views/recipeOne.hbs
+++ b/views/recipeOne.hbs
@@ -1,12 +1,20 @@
 {{!-- Display the details of a recipe --}}
 <div>
+
     <h2>{{recipe.name}}</h2> 
-    <a href="/recipes/delete/{{recipe._id}}">"DELETE" icon</a>
-    {{!-- <img src="/images/icons/trash-alt.svg" alt="trash-icon"> --}}
-    <a href="/recipes/edit/{{recipe._id}}">"EDIT" icon</a>
-    {{!-- <img src="/images/icons/pencil.svg" alt="edit-icon"> --}}
-    <a href="/recipes">Revenir à la liste des recettes</a>
+
+    {{#if creator}}
+        <a href="/recipes/delete/{{recipe._id}}">"DELETE" icon</a>
+        {{!-- <img src="/images/icons/trash-alt.svg" alt="trash-icon"> --}}
+        <a href="/recipes/edit/{{recipe._id}}">"EDIT" icon</a>
+        {{!-- <img src="/images/icons/pencil.svg" alt="edit-icon"> --}}
+    {{/if}}
+
+    <section id="back-link">
+        <a href="{{fromRoute}}">Fermer</a>
+    </section>  
     <img src="{{recipe.image}}" alt="">
+
 </div>
 
 <div>
