--- a/views/gameMode.hbs
+++ b/views/gameMode.hbs
@@ -9,12 +9,19 @@
 
 <div id="game-play" style="background-image: url('{{currentBackground}}')">
   <div id="card">
-    <img src="{{currentPlant.imageUrl}}" alt="{{currentPlant.commonName}}">
-    {{!-- <img src="{{currentPlant.imageUrl}}" alt="Tu y as cru, vraiment ;) ?"> --}}
+    <img src="{{currentPlant.imageUrl}}" alt="Tu y as cru, vraiment ;) ?">
+    {{#if TEST_MODE}}
+    <div id="TEST_MODE">
+        {{ currentPlant.commonName }}<br>
+        {{#if currentPlant.isEdible}}<img src="/images/icons/carrot.svg" alt="comestible">{{/if}}
+        {{#if currentPlant.isToxic}}<img src="/images/icons/ambulance.svg" alt="toxique">{{/if}}
+        {{#if currentPlant.isLethal}}<img src="/images/icons/flask-poison.svg" alt="mortelle">{{/if}}
+    </div>
+    {{/if}}
     {{#if gameplay.cardQuestionDisplay}}
     <div>
       <a href="/game/{{gameplay.mode}}/eat">Mange-moi</a>
-      <a href="/game/{{gameplay.mode}}/leave">Jette-moi</a>
+      <a href="/game/{{gameplay.mode}}/leave">Laisse-moi</a>
     </div>
     {{/if}}
     {{#if gameplay.cardAnswerDisplay}}
