--- a/views/plantAll.hbs
+++ b/views/plantAll.hbs
@@ -5,6 +5,14 @@
   <div id="card">
     <div><img src="{{this.imageUrl}}" alt="{{this.commonName}}" class="plant-img"></div>
     <div><img src="/images/icons/thumbs-up.svg" alt="success" class="icon"></div>
+
+    <div id="TEST_MODE">
+        {{ this.commonName }}<br>
+        {{#if this.isEdible}}<img src="/images/icons/carrot.svg" alt="comestible">{{/if}}
+        {{#if this.isToxic}}<img src="/images/icons/ambulance.svg" alt="toxique">{{/if}}
+        {{#if this.isLethal}}<img src="/images/icons/flask-poison.svg" alt="mortelle">{{/if}}
+    </div>
+
   </div>
   {{/each}}
 </div>
