--- a/views/plantOne.hbs
+++ b/views/plantOne.hbs
@@ -21,8 +21,8 @@
       </tr>
       <tr>
         <td>{{#if plant.isEdible}}<img src="/images/icons/carrot.svg" alt="comestible">{{/if}}</td>
-        <td>{{#if plant.isToxic}}<img src="/images/icons/ambulance.svg" alt="comestible">{{/if}}</td>
-        <td>{{#if plant.isLethal}}<img src="/images/icons/flask-poison.svg" alt="comestible">{{/if}}</td>
+        <td>{{#if plant.isToxic}}<img src="/images/icons/ambulance.svg" alt="toxique">{{/if}}</td>
+        <td>{{#if plant.isLethal}}<img src="/images/icons/flask-poison.svg" alt="mortelle">{{/if}}</td>
       </tr>
     </thead>
   </table>
