trying to fix bug in add recipe form

--- a/views/recipeAdd.hbs
+++ b/views/recipeAdd.hbs
@@ -22,12 +22,21 @@
         </select>
 
         <label for="otherIngredients">Autres ingrédients</label>
-        <input type="text" id="otherIngredients" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
+        <input type="text" name="otherIngredients">
         {{!-- add button to ad new ingredient and clear input field --}}
         {{!-- addeventlistener on BTN => axios post to add the input value a list below--}}
         
         {{!-- ATTENTION CHANGER DESTINATION DU HREF --}}
-        <button id="add-new-ingredient">Ajouter</button>
+        {{!-- <button id="add-new-ingredient">Ajouter</button> --}}
 
         <ul id="new-ingredients-list"></ul>
         
