--- a/views/Partials/nav.hbs
+++ b/views/Partials/nav.hbs
@@ -5,21 +5,21 @@
     <a href="/signup">S'inscrire</a>
     <a href="/logout">Se déconnecter</a>
     <a href="/game">Jouer</a>
-    <a href="/game/rules">Les règles du jeu</a>
-    <a href="/player">Votre profil</a>
-    <a href="/recipes">Vos recettes</a>
+    <a href="/game/rules">Règles du jeu</a>
+    <a href="/player">Ton profil</a>
+    <a href="/recipes">Tes recettes</a>
     </nav>
 </header>
 <aside id="sidebar">
     <i id ="iconBurger" class="burger fa fa-bars fa-xl"></i>
     <nav id="nav-mobile">
-        <a href="/signin">Se connecter</a>
-        <a href="/signup">S'inscrire</a>
-        <a href="/logout">Se déconnecter</a>
-        <a href="/game">Jouer</a>
-        <a href="/game/rules">Les règles du jeu</a>
-        <a href="/player">Votre profil</a>
-        <a href="/recipes">Vos recettes</a>
+        <a href="/signin">_Se connecter</a>
+        <a href="/signup">_S'inscrire</a>
+        <a href="/logout">_Se déconnecter</a>
+        <a href="/game">_Jouer</a>
+        <a href="/game/rules">_Règles du jeu</a>
+        <a href="/player">_Ton profil</a>
+        <a href="/recipes">_Tes recettes</a>
     </nav>
 
 </aside>
