css for home page + game start

--- a/views/gameHome.hbs
+++ b/views/gameHome.hbs
@@ -1,13 +1,13 @@
-<h2>Jouer</h2>
+{{!-- <h2>Jouer</h2>
 
 <div id="text-intro">
   <p>Prêt à survivre en pleine nature ?</p>
   <p>En fonction de ta forme, opte pour l'option de ton choix :</p>
-</div>
+</div> --}}
 
 <div id="link-modes">
-  <a href="/game/{{links.balade}}/begin">Balade</a>
-  <a href="/game/{{links.rando}}/begin">Rando</a>
-  <a href="/game/{{links.trek}}/begin">Trek</a>
+  <a class="start-link" href="/game/{{links.balade}}/begin">Une petite balade ?</a>
+  <a class="start-link" href="/game/{{links.rando}}/begin">Une bonne rando ?</a>
+  <a class="start-link" href="/game/{{links.trek}}/begin">C'est parti pour un trek!</a>
 </div>
 
