--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,8 +1,13 @@
-
 <main id="content-main">
-    <h1>Project Edibles</h1>
-    <a href="/game">Jouer</a>
-    <a href="/game/rules">Lire les règles</a>
+    <div id="main-title-card">
+        <h2>CITROUILLE</h2>
+        <img id="home-main-picture" src="/images/pixelarts/home.png" alt="pixel-art picture of a plant">
+        <h2>OU CIGÜE ?</h2>
+    </div>
+    <div class="main-btns-box">
+        <a id="game-btn" class="main-btn" href="/game">Jouer</a>
+        <a id="rules-btn" class="main-btn" href="/game/rules">Les règles</a>
+    </div>
 </main>
 
 
