--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -1,17 +1,40 @@
 /* CSS for GAME VIEWS */
-
-/* START SCREEN */
-#game-home a {
-  color: black;
-  /* text-decoration: none; */
+body {
+  padding: 0;
+  margin: 0;
 }
 
+/* START SCREEN
+#game-home a {
+  color: black;
+  /* text-decoration: none; 
+} */
+
+#link-modes {
+  width: 100vw;
+  height: 100vh;
+  background: url("/images/backgrounds/rando1.png") no-repeat center fixed;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
+
+.start-link {
+  border: 3px solid black;
+  background-color: white;
+  border-radius: 20px;
+  padding: 15px;
+  font-size: 2.5rem;
+  text-align: center;
+  width: 400px;
+  font-family: "IBM Plex Mono";
+  font-weight: 700;
+}
 
 /* PLAYING SCREEN */
-<<<<<<< Updated upstream
-
-=======
->>>>>>> Stashed changes
 #game-play {
   background-repeat: no-repeat;
   height: 80vh;
@@ -49,3 +72,9 @@
 }
 
 
+@media (max-width: 500px) {
+  .start-link {
+    width: 80vw;
+    font-size: 1.5rem;
+  }
+}
