--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,9 @@ html {
 
 
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
