--- a/views/Partials/nav.hbs
+++ b/views/Partials/nav.hbs
@@ -13,13 +13,13 @@
 <aside id="sidebar">
     <i id ="iconBurger" class="burger fa fa-bars fa-xl"></i>
     <nav id="nav-mobile">
-        <a href="/signin">_Se connecter</a>
-        <a href="/signup">_S'inscrire</a>
-        <a href="/logout">_Se déconnecter</a>
-        <a href="/game">_Jouer</a>
-        <a href="/game/rules">_Règles du jeu</a>
-        <a href="/player">_Ton profil</a>
-        <a href="/recipes">_Tes recettes</a>
+        <div class="a-mobile-div"><a class="mobile-nav-a" href="/signin">_Se connecter</a></div>
+        <div class="a-mobile-div"><a class="mobile-nav-a" href="/signup">_S'inscrire</a></div>
+        <div class="a-mobile-div"><a class="mobile-nav-a" href="/logout">_Se déconnecter</a></div>
+        <div class="a-mobile-div"><a class="mobile-nav-a" href="/game">_Jouer</a></div>
+        <div class="a-mobile-div"><a class="mobile-nav-a" href="/game/rules">_Règles du jeu</a></div>
+        <div class="a-mobile-div"><a class="mobile-nav-a" href="/player">_Ton profil</a></div>
+        <div class="a-mobile-div"><a class="mobile-nav-a" href="/recipes">_Tes recettes</a></div>
     </nav>
 
 </aside>
