--- a/public/stylesheets/burger.css
+++ b/public/stylesheets/burger.css
@@ -1,29 +1,33 @@
-a {
-  color: black;
-  text-decoration: none;
-  padding: 10px;
-}
-
-a:hover {
-  border-radius: 12%;
-  font-weight: bold;
-  background-color: var(--dark-green);
-}
-
-#nav-mobile a {
-  color: tomato;
-}
-
 #header-main {
   display: flex;
   gap: 1em;
-  background-color: rgb(171, 243, 248);
+  border: 2px solid black;
+  background-color: white;
+  border-radius: 15px;
+  font-family: Roboto;
+  font-size: 1.4rem;
+  padding: 0 10px;
 }
 
 #nav-main {
   display: flex;
   justify-content: space-between;
   width: 100%;
+}
+
+/* .mobile-nav-a:hover {
+  border-radius: 12%;
+  font-weight: bolder;
+  color: white;
+  background-color: var(--dark-green);
+} */
+
+#nav-mobile a {
+  font-family: "IBM Plex Mono";
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 10px;
 }
 
 #sidebar {
@@ -35,7 +39,7 @@ a:hover {
   display: none;
   flex-direction: column;
   gap: 1rem;
-  background-color: rgb(145, 248, 214);
+  background-color: blue;
   transform: translateX(-200%);
   transition: transform 0.5s ease-in-out;
   height: calc(100vh);
@@ -43,11 +47,19 @@ a:hover {
   position: absolute;
 }
 
+/* TEST */
+.a-mobile-div:hover {
+  font-weight: bolder;
+  color: white;
+  background-color: var(--dark-green);
+  border-radius: 12%;
+}
+
 #nav-mobile.is-active {
   transform: translateX(0%);
 }
 
-@media (max-width: 650px) {
+@media (max-width: 850px) {
   #nav-main {
     display: none;
   }
@@ -58,5 +70,17 @@ a:hover {
 
   #sidebar {
     display: block;
+  }
+
+  .main-btns-box {
+    flex-direction: column;
+    gap: 20px;
+  }
+  .main-btn {
+    width: 90%;
+  }
+  #header-main {
+    border: none;
+    background-color: none;
   }
 }
