finished styling burger menu

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -8,10 +8,11 @@
     <a href="/game/rules">Règles du jeu</a>
     <a href="/player">Ton profil</a>
     <a href="/recipes">Tes recettes</a>
+    <a href="/">Page d'accueil</a>
     </nav>
 </header>
 <aside id="sidebar">
-    <i id ="iconBurger" class="burger fa fa-bars fa-xl"></i>
+    <img id ="iconBurger" src="/images/pixelarts/28156932.jpeg" alt="a cauldron"></img>
     <nav id="nav-mobile">
         <div class="a-mobile-div"><a class="mobile-nav-a" href="/signin">_Se connecter</a></div>
         <div class="a-mobile-div"><a class="mobile-nav-a" href="/signup">_S'inscrire</a></div>
@@ -20,6 +21,7 @@
         <div class="a-mobile-div"><a class="mobile-nav-a" href="/game/rules">_Règles du jeu</a></div>
         <div class="a-mobile-div"><a class="mobile-nav-a" href="/player">_Ton profil</a></div>
         <div class="a-mobile-div"><a class="mobile-nav-a" href="/recipes">_Tes recettes</a></div>
+        <div class="a-mobile-div"><a class="mobile-nav-a" href="/">_Page d'accueil</a></div>
     </nav>
 
 </aside>
