--- a/public/stylesheets/burger.css
+++ b/public/stylesheets/burger.css
@@ -5,8 +5,8 @@
   background-color: white;
   border-radius: 15px;
   font-family: Roboto;
-  font-size: 1.4rem;
-  padding: 0 10px;
+  font-size: 1.5rem;
+  padding: 10px 20px;
 }
 
 #nav-main {
@@ -15,16 +15,9 @@
   width: 100%;
 }
 
-/* .mobile-nav-a:hover {
-  border-radius: 12%;
-  font-weight: bolder;
-  color: white;
-  background-color: var(--dark-green);
-} */
 
 #nav-mobile a {
   font-family: "IBM Plex Mono";
-  color: black;
   font-weight: bold;
   text-decoration: none;
   padding: 10px;
@@ -39,33 +32,53 @@
   display: none;
   flex-direction: column;
   gap: 1rem;
-  background-color: blue;
+  background-color: white;
   transform: translateX(-200%);
   transition: transform 0.5s ease-in-out;
   height: calc(100vh);
   width: 100vw;
   position: absolute;
+  font-size: 2rem;
 }
+
+
 
 /* TEST */
 .a-mobile-div:hover {
+  width: fit-content;
   font-weight: bolder;
-  color: white;
+  font-style: italic;
   background-color: var(--dark-green);
-  border-radius: 12%;
 }
+
+.a-mobile-div:hover a.mobile-nav-a {
+  color: white;
+}
+
 
 #nav-mobile.is-active {
   transform: translateX(0%);
 }
+
+
 
 @media (max-width: 850px) {
   #nav-main {
     display: none;
   }
 
+  #iconBurger {
+    width: 100px;
+    border-radius: 20%;
+    margin-bottom: 30px;
+  }
+
   #nav-mobile {
     display: flex;
+    padding: 20px 20px;
+  }
+  .a-mobile-div {
+    padding: 5px;
   }
 
   #sidebar {
@@ -80,7 +93,6 @@
     width: 90%;
   }
   #header-main {
-    border: none;
-    background-color: none;
+    visibility: hidden;
   }
 }
