some styling on the game pages

--- a/public/stylesheets/variables.css
+++ b/public/stylesheets/variables.css
@@ -1,6 +1,7 @@
 :root {
     --dark-green: #3a685bff;
     --light-green: #84d68b79;
+    --lighter-green: #aef8b479;
     --red: #cc4125ff;
     --orange: #ff9900ff;
 }
