--- a/views/gameEnd.hbs
+++ b/views/gameEnd.hbs
@@ -1,12 +1,12 @@
-<h2>Quel périple !</h2>
+<h2>Le périple s'achève ici...</h2>
 
 
-<div id="mode-lifebar">
+{{!-- <div id="mode-lifebar">
   <div>
     <p class="game-mode">{{gameplay.mode}}</p>
   </div>
   {{> lifebar}}
-</div>
+</div> --}}
 
 <div id="game-recap">
 
