--- a/public/stylesheets/burger.css
+++ b/public/stylesheets/burger.css
@@ -7,6 +7,7 @@
   font-family: Roboto;
   font-size: 1.5rem;
   padding: 10px 20px;
+  margin-top: 1rem; 
 }
 
 #nav-main {
@@ -15,6 +16,11 @@
   width: 100%;
 }
 
+#nav-main a:hover {
+  font-weight: 700;
+  color: var(--dark-green);
+  transition: 0.5s;
+}
 
 #nav-mobile a {
   font-family: "IBM Plex Mono";
