--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -2,20 +2,20 @@ body {
     background-color: var(--dark-green);
 }
 
+.container {
+    padding: 0;
+    padding-top: 1rem;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
 #content-main {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-/* 
-#header-main {
-    border: 2px solid black;
-    background-color: white;
-    border-radius: 15px;
-    font-family: Roboto;
-    font-size: 1.4rem;
-    padding: 0 10px;
-} */
+
 
 #main-title-card {
     border: 3px solid black;
@@ -61,6 +61,12 @@ body {
     width: 50%;
 }
 
+.main-btn:hover {
+    font-size: 2.6rem;
+    transition: 0.5s ease-in-out;
+    background-color: var(--lighter-green);
+}
+
 @media (max-width: 800px) {
    .main-btns-box{
        flex-direction: column;
@@ -71,9 +77,5 @@ body {
        width: 90%;
    }
 
-   #header-main {
-    border: none;
-    background-color: none;
-   }
   }
   
