--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,9 @@
     {{/if}}
   </head>
   <body>
-    {{>nav}}
-    {{{body}}}
+    <div class="container">
+      {{>nav}}
+      {{{body}}}
+    </div>
   </body>
 </html>
