player css début

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -21,7 +21,7 @@
     {{/if}}
   </head>
   <body>
-    <div class="container">
+    <div id="container">
       {{>nav}}
       {{{body}}}
     </div>
