--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,17 +1,18 @@
-@import url('./variables.css');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;900&display=swap');
+@import url("./variables.css");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&family=Roboto:wght@300;400;500;900&display=swap");
 
 html {
   font-size: 10px;
-  font-family: 'IBM Plex Mono', 'Roboto', monospace, sans-serif;
+  font-family: "IBM Plex Mono", "Roboto", monospace, sans-serif;
 }
-
 
 body {
   margin: 0;
   box-sizing: border-box;
-  padding: 0px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  /* padding: 50px; */
+  /* font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; */
+  width: 100vw;
+  height: 100vh;
 }
 
 a {
