--- a/public/stylesheets/game-home.css
+++ b/public/stylesheets/game-home.css
@@ -1,21 +1,22 @@
-/* body {
-    background-image: url("/images/backgrounds/rando1.png") contain;
+body {
+    background-image: url("/images/backgrounds/rando1.png");
     background-repeat: no-repeat;
     background-size: cover;
-  } */
+    background-position: top center;
+  } 
   
-  /* .container {
+   #container {
     padding: 0;
     padding-top: 1rem;
     margin: 0;
     width: 100vw;
     height: 100vh;
   }
-   */
+  
   #link-modes {
-    background-image: url("images/backgrounds/rando1.png");
+    /* background-image: url("images/backgrounds/rando1.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
     width: 100vw;
     height: 100vh;
     display: flex;
