--- a/public/stylesheets/player.css
+++ b/public/stylesheets/player.css
@@ -2,6 +2,7 @@ body {
   background-image: url(/images/backgrounds/trek11.png);
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 #container {
@@ -10,4 +11,81 @@ body {
   padding-top: 0;
   width: 100vw;
   height: 100vh;
+}
+
+#content-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+p > a {
+  color: #3a685bff;
+}
+
+p > a:hover {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#plant-container-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: space-evenly;
+}
+
+.plant-container img {
+  width: 100px;
+  border-radius: 20px;
+}
+
+#add-recipe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#add-recipe a {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+#add-icon {
+  width: 5rem;
+  margin-top: 0;
+}
+
+#big-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 30px;
+  padding: 30px 15px;
+  /* height: 80vh; */
+  width: 60vw;
+  max-width: 800px;
+  /* max-height: 800px; */
+  background-color: white;
+  border: 3px solid black;
+  border-radius: 50px;
+  font-family: "IBM Plex Mono";
+  font-size: 1.5rem;
+}
+
+#img-div img {
+  width: 120px;
+  height: 120px;
+}
+
+h3,
+h4 {
+  font-family: "IBM Plex Mono", "Roboto", monospace, sans-serif;
+}
+
+#infos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
